Update page header size.

--- a/templates/add_perm_templ.html
+++ b/templates/add_perm_templ.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Add permission template' %}</h2>
+<h4 class="mb-3">{% trans 'Add permission template' %}</h4>
 <form method="post" action="">
     <table>
         <tr>
