--- a/templates/bulk_registration.html
+++ b/templates/bulk_registration.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Bulk registration' %}</h2>
+<h4 class="mb-3">{% trans 'Bulk registration' %}</h4>
 
 <form method="post" action="bulk_registration.php">
     <table>
