--- a/templates/delete_domain.html
+++ b/templates/delete_domain.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Delete zone' %} "{{ zone_info['name'] }}"</h2>
+<h4 class="mb-3">{% trans 'Delete zone' %} "{{ zone_info['name'] }}"</h4>
 {% trans 'Owner' %}: {{ zone_owners }}<br>
 {% trans 'Type' %}: {{ zone_info['type'] }}
 
