--- a/templates/delete_supermaster.html
+++ b/templates/delete_supermaster.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Delete supermaster' %} "{{ master_ip }}"</h2>
+<h4 class="mb-3">{% trans 'Delete supermaster' %} "{{ master_ip }}"</h4>
 
 <p>
     {% trans 'Hostname in NS record' %}: {{ info['ns_name'] }}<br>
