--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Edit comment in zone' %} {{ zone_name }}</h2>
+<h4 class="mb-3">{% trans 'Edit comment in zone' %} {{ zone_name }}</h4>
 <form method="post" action="edit_comment.php?domain={{ zid }}">
     <table>
         <tr>
