--- a/templates/list_perm_templ.html
+++ b/templates/list_perm_templ.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Permission templates' %}</h2>
+<h4 class="mb-3">{% trans 'Permission templates' %}</h4>
 <table>
     <tr>
         <th>&nbsp;</th>
