--- a/templates/list_supermasters.html
+++ b/templates/list_supermasters.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'List supermasters' %}</h2>
+<h4 class="mb-3">{% trans 'List supermasters' %}</h4>
 <table>
     <tr>
         <th>&nbsp;</th>
