--- a/templates/list_zone_templ.html
+++ b/templates/list_zone_templ.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Zone templates for' %} {{ username }}</h2>
+<h4 class="mb-3">{% trans 'Zone templates for' %} {{ username }}</h4>
 <table>
     <tr>
         <th>&nbsp;</th>
