--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Add zone template for' %} {{ username }}</h2>
+<h4 class="mb-3">{% trans 'Add zone template for' %} {{ username }}</h4>
 <form method="post" action="add_zone_templ.php">
     <table>
         <tr>
