--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Change password' %}</h2>
+<h4 class="mb-3">{% trans 'Change password' %}</h4>
 <form method="post" action="change_password.php">
     <table>
         <tr>
