--- a/templates/delete_perm_templ.html
+++ b/templates/delete_perm_templ.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Delete permission template' %} "{{ templ_name }}"</h2>
+<h4 class="mb-3">{% trans 'Delete permission template' %} "{{ templ_name }}"</h4>
 
 <p>{% trans 'Are you sure?' %}</p>
 <input type="button" class="button" onClick="location.href='delete_perm_templ.php?id={{ perm_templ_id }}&confirm=1'" value="{% trans 'Yes' %}">
