--- a/templates/delete_record.html
+++ b/templates/delete_record.html
@@ -1,4 +1,4 @@
-<h2>{% trans 'Delete record in zone' %} "<a href="edit.php?id={{ zid }}">{{ zone_name }}</a>"</h2>
+<h4 class="mb-3">{% trans 'Delete record in zone' %} "<a href="edit.php?id={{ zid }}">{{ zone_name }}</a>"</h4>
 
 <table>
     <tr>
