Use bootstrap in password change form.

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,23 +1,20 @@
 <h4 class="mb-3">{% trans 'Change password' %}</h4>
 <form method="post" action="change_password.php">
-    <table>
-        <tr>
-            <td class="n" width="150">{% trans 'Current password' %}:</td>
-            <td class="n"><input type="password" class="input" name="currentpass" value=""></td>
-        </tr>
-        <tr>
-            <td class="n">{% trans 'New password' %}:</td>
-            <td class="n"><input type="password" class="input" name="newpass" value=""></td>
-        </tr>
-        <tr>
-            <td class="n">{% trans 'New password' %}:</td>
-            <td class="n"><input type="password" class="input" name="newpass2" value=""></td>
-        </tr>
-        <tr>
-            <td class="n">&nbsp;</td>
-            <td class="n">
-                <input type="submit" class="button" name="submit" value="{% trans 'Change password' %}">
-            </td>
-        </tr>
-    </table>
+    <div class="row g-2 col-sm-4">
+        <div>
+            <label for="current_password" class="form-label">{% trans 'Current password' %}</label>
+            <input type="password" class="form-control" id="current_password" name="currentpass" value="">
+        </div>
+        <div>
+            <label for="new_password" class="form-label">{% trans 'New password' %}</label>
+            <input type="password" class="form-control" id="new_password" name="newpass" value="">
+        </div>
+        <div>
+            <label for="repeat_password" class="form-label">{% trans 'Repeat password' %}:</label>
+            <input type="password" class="form-control" id="repeat_password" name="newpass2" value="">
+        </div>
+        <div>
+            <input type="submit" class="btn btn-primary" name="submit" value="{% trans 'Change password' %}">
+        </div>
+    </div>
 </form>
