--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,7 @@
 <h4 class="mb-3">{% trans 'User administration' %}</h4>
+
 <form method="post" action="">
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover table-sm">
         <thead>
         <tr>
             <th>{% trans 'Username' %}</th>
@@ -33,13 +34,13 @@
 
         {% if (user_uid == session_userid and perm_edit_own) or (user_uid != session_userid and perm_edit_others) %}
         <tr>
-            <td><input type="text" name="user[{{ user['uid'] }}][username]" value="{{ user ['username'] }}"></td>
-            <td><input type="text" name="user[{{ user['uid'] }}][fullname]" value="{{ user ['fullname'] }}"></td>
-            <td><input type="text" name="user[{{ user['uid'] }}][descr]" value="{{ user ['descr'] }}"></td>
-            <td><input type="text" name="user[{{ user['uid'] }}][email]" value="{{ user ['email'] }}"></td>
+            <td><input class="form-control" type="text" name="user[{{ user['uid'] }}][username]" value="{{ user ['username'] }}"></td>
+            <td><input class="form-control" type="text" name="user[{{ user['uid'] }}][fullname]" value="{{ user ['fullname'] }}"></td>
+            <td><input class="form-control" type="text" name="user[{{ user['uid'] }}][descr]" value="{{ user ['descr'] }}"></td>
+            <td><input class="form-control" type="text" name="user[{{ user['uid'] }}][email]" value="{{ user ['email'] }}"></td>
             <td>
                 {% if perm_templ_perm_edit %}
-                <select name="user[{{ user['uid'] }}][templ_id]">
+                <select class="form-control" name="user[{{ user['uid'] }}][templ_id]">
                     {% for template in perm_templates %}
                     {% if template['id'] == user['tpl_id'] %}
                     {% set selected = 'SELECTED' %}
@@ -76,12 +77,12 @@
             <td>
                 <input type="hidden" name="user[{{ user_uid }}][uid]" value="{{ user_uid }}">
                 <a href="edit_user.php?id={{ user_uid }}">
-                    <img src="images/edit.gif" alt="{% trans 'Edit user' %}">
+                    <i class="bi bi-pencil-square"></i>
                 </a>
 
                 {% if user['uid'] != session_userid %}
                 <a href="delete_user.php?id={{ user['uid'] }}">
-                    <img src="images/delete.gif" alt="{% trans 'Delete user' %}">
+                    <i class="bi bi-trash"></i>
                 </a>
                 {% endif %}
             </td>
@@ -112,22 +113,22 @@
         </tbody>
     </table>
 
-    <input type="submit" class="button" name="commit" value="{% trans 'Commit changes' %}">
-    <input type="reset" class="button" name="reset" value="{% trans 'Reset changes' %}">
+    <input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Commit changes' %}">
+    <input type="reset" class="btn btn-secondary" name="reset" value="{% trans 'Reset changes' %}">
 </form>
 
 {% if perm_templ_perm_edit or perm_add_new %}
-<ul>
+<div class="pt-3">
     {% endif %}
 
     {% if perm_templ_perm_edit %}
-    <li><a href="list_perm_templ.php">{% trans 'Edit permission template' %}</a></li>
+    <a class="btn btn-outline-secondary btn-sm" href="list_perm_templ.php">{% trans 'Edit permission template' %}</a></li>
     {% endif %}
 
     {% if perm_add_new %}
-    <li><a href="add_user.php">{% trans 'Add user' %}</a></li>
+    <a class="btn btn-outline-secondary btn-sm" href="add_user.php">{% trans 'Add user' %}</a></li>
     {% endif %}
 
     {% if perm_templ_perm_edit or perm_add_new %}
-</ul>
+</div>
 {% endif %}
