--- a/templates/list_zone_templ.html
+++ b/templates/list_zone_templ.html
@@ -1,29 +1,31 @@
 <h4 class="mb-3">{% trans 'Zone templates for' %} {{ username }}</h4>
-<table>
+<table class="table table-striped table-hover">
+    <thead>
     <tr>
-        <th>&nbsp;</th>
         <th>{% trans 'Name' %}</th>
         <th>{% trans 'Description' %}</th>
+        <th>&nbsp;</th>
     </tr>
+    </thead>
 
+    <tbody>
     {% for template in zone_templates %}
     <tr>
+        <td>{{ template['name'] }}</td>
+        <td>{{ template['descr'] }}</td>
         {% if perm_zone_master_add %}
         <td>
-            <a href="edit_zone_templ.php?id={{ template['id'] }}"><img src="images/edit.gif"
-                                                                       alt="[ {% trans 'Edit template' %} ]"></a>
-            <a href="delete_zone_templ.php?id={{ template['id'] }}"><img src="images/delete.gif"
-                                                                         alt="[ {% trans 'Delete template' %} ]"></a>
+            <a class="btn btn-outline-primary btn-sm" href="edit_zone_templ.php?id={{ template['id'] }}"><i class="bi bi-pencil-square"></i> {% trans 'Edit template' %}</a>
+            <a class="btn btn-outline-danger btn-sm" href="delete_zone_templ.php?id={{ template['id'] }}"><i class="bi bi-trash"></i> {% trans 'Delete template' %}</a>
         </td>
         {% else %}
         <td>&nbsp;</td>
         {% endif %}
-        <td class="y">{{ template['name'] }}</td>
-        <td class="y">{{ template['descr'] }}</td>
     </tr>
     {% endfor %}
+    </tbody>
 
 </table>
-<ul>
-    <li><a href="add_zone_templ.php">{% trans 'Add zone template' %}</a>.</li>
-</ul>
+<div>
+    <a class="btn btn-primary" href="add_zone_templ.php">{% trans 'Add zone template' %}</a>
+</div>
