--- a/templates/list_perm_templ.html
+++ b/templates/list_perm_templ.html
@@ -1,23 +1,25 @@
 <h4 class="mb-3">{% trans 'Permission templates' %}</h4>
-<table>
+<table class="table table-striped table-hover">
+    <thead>
     <tr>
-        <th>&nbsp;</th>
         <th>{% trans 'Name' %}</th>
         <th>{% trans 'Description' %}</th>
+        <th>&nbsp;</th>
     </tr>
-
+    </thead>
+    <tbody>
     {% for template in permission_templates %}
         <tr>
-            <td>
-                <a href="edit_perm_templ.php?id={{ template['id'] }}"><img src="images/edit.gif" alt="{% trans 'Edit template' %}"></a>
-                <a href="delete_perm_templ.php?id={{ template['id'] }}"><img src="images/delete.gif" alt="{% trans 'Delete template' %}"></a>
-            </td>
             <td>{{ template['name'] }}</td>
             <td>{{ template['descr'] }}</td>
+            <td>
+                <a class="btn btn-outline-primary btn-sm" href="edit_perm_templ.php?id={{ template['id'] }}"><i class="bi bi-pencil-square"></i> {% trans 'Edit template' %}</a>
+                <a class="btn btn-outline-danger btn-sm" href="delete_perm_templ.php?id={{ template['id'] }}"><i class="bi bi-trash"></i> {% trans 'Delete template' %}</a>
         </tr>
     {% endfor %}
+    </tbody>
 </table>
 
-<ul>
-    <li><a href="add_perm_templ.php">{% trans 'Add permission template' %}</a>.</li>
-</ul>
+<div>
+    <a class="btn btn-primary" href="add_perm_templ.php">{% trans 'Add permission template' %}</a>
+</div>
