--- a/templates/add_perm_templ.html
+++ b/templates/add_perm_templ.html
@@ -3,11 +3,11 @@
     <table>
         <tr>
             <td width="100">{% trans 'Name' %}</td>
-            <td><input class="input" type="text" name="templ_name" value=""></td>
+            <td><input class="form-control" type="text" name="templ_name" value=""></td>
         </tr>
         <tr>
             <td>{% trans 'Description' %}</td>
-            <td><input class="wide" type="text" name="templ_descr" value=""></td>
+            <td><input class="form-control" type="text" name="templ_descr" value=""></td>
         </tr>
     </table>
     <table>
@@ -26,5 +26,5 @@
         </tr>
         {% endfor %}
     </table>
-    <input type="submit" class="button" name="commit" value="{% trans 'Commit changes' %}">
+    <input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Commit changes' %}">
 </form>
