--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -29,7 +29,7 @@
         {% endif %}
     </table>
     <p>
-        <input type="submit" name="commit" value="{% trans 'Commit changes' %}" class="button">&nbsp;&nbsp;
-        <input type="reset" name="reset" value="{% trans 'Reset changes' %}" class="button">&nbsp;&nbsp;
+        <input type="submit" name="commit" value="{% trans 'Commit changes' %}"  class="btn btn-primary">&nbsp;&nbsp;
+        <input type="reset" name="reset" value="{% trans 'Reset changes' %}"  class="btn btn-secondary">&nbsp;&nbsp;
     </p>
 </form>
