--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -3,12 +3,12 @@
     <table>
         <tr>
             <td width="150">{% trans 'Name' %}</td>
-            <td><input class="input" type="text" name="templ_name" value=""></td>
+            <td><input class="inform-controlput" type="text" name="templ_name" value=""></td>
         </tr>
         <tr>
             <td>{% trans 'Description' %}</td>
-            <td><input class="wide" type="text" name="templ_descr" value=""></td>
+            <td><input class="form-control" type="text" name="templ_descr" value=""></td>
         </tr>
     </table>
-    <input type="submit" class="button" name="commit" value="{% trans 'Add zone template' %}">
+    <input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Add zone template' %}">
 </form>
