--- a/templates/bulk_registration.html
+++ b/templates/bulk_registration.html
@@ -49,7 +49,7 @@
                 <ul id="domain_names" style="list-style-type:none; padding:0 ">
                     <li>{% trans 'Type one domain per line' %}:</li>
                     <li>
-                        <textarea class="input" name="domains" rows="10" cols="30" style="width: 500px;">{% if error and domains %}{{ domains | join('\n') }}{% endif %}</textarea>
+                        <textarea class="form-control" name="domains" rows="10" cols="30" style="width: 500px;">{% if error and domains %}{{ domains | join('\n') }}{% endif %}</textarea>
                     </li>
                 </ul>
             </td>
@@ -58,7 +58,7 @@
         <tr>
             <td>&nbsp;</td>
             <td>
-                <input type="submit" class="button" name="submit" value="{% trans 'Add zones' %}">
+                <input type="submit" class="btn btn-primary" name="submit" value="{% trans 'Add zones' %}">
             </td>
         </tr>
     </table>
