--- a/templates/delete_domain.html
+++ b/templates/delete_domain.html
@@ -11,6 +11,6 @@
 {% endif %}
 
 <p>{% trans 'Are you sure?' %}</p>
-<input type="button" class="button" onClick="location.href='delete_domain.php?id={{ zone_id }}&confirm=1'"
+<input type="button" class="btn btn-primary" onClick="location.href='delete_domain.php?id={{ zone_id }}&confirm=1'"
        value="{% trans 'Yes' %}">
-<input type="button" class="button" onClick="location.href='index.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary" onClick="location.href='index.php'" value="{% trans 'No' %}">
