--- a/templates/delete_supermaster.html
+++ b/templates/delete_supermaster.html
@@ -5,7 +5,7 @@
     {% trans 'Account' %}: {{ info['account'] }}
 </p>
 <p>{% trans 'Are you sure?' %}</p>
-<input type="button" class="button"
+<input type="button" class="btn btn-primary"
        onClick="location.href='delete_supermaster.php?master_ip={{ master_ip }}&ns_name={{ info['ns_name'] }}&confirm=1'"
        value="{% trans 'Yes' %}">
-<input type="button" class="button" onClick="location.href='index.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary" onClick="location.href='index.php'" value="{% trans 'No' %}">
