--- a/templates/edit_perm_templ.html
+++ b/templates/edit_perm_templ.html
@@ -5,11 +5,11 @@
     <table>
         <tr>
             <td width="100">{% trans 'Name' %}</td>
-            <td><input class="input" type="text" name="templ_name" value="{{ templ['name'] }}"></td>
+            <td><input class="form-control" type="text" name="templ_name" value="{{ templ['name'] }}"></td>
         </tr>
         <tr>
             <td>{% trans 'Description' %}</td>
-            <td><input class="wide" type="text" name="templ_descr" value="{{ templ['descr'] }}"></td>
+            <td><input class="form-control" type="text" name="templ_descr" value="{{ templ['descr'] }}"></td>
         </tr>
     </table>
 
@@ -35,5 +35,5 @@
         </tr>
         {% endfor %}
     </table>
-    <input type="submit" class="button" name="commit" value="{% trans 'Commit changes' %}">
+    <input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Commit changes' %}">
 </form>
