Updated installer styling.

--- a/install/templates/step1.html
+++ b/install/templates/step1.html
@@ -8,5 +8,5 @@
     <input type="radio" name="language" value="nb_NO"> Jeg ønsker å forsette på norsk.<br>
     <input type="hidden" name="step" value="{{ next_step }}">
     <br>
-    <input type="submit" name="submit" value="{% trans 'Go to step' %} {{ next_step }}">
+    <input type="submit" name="submit" class="btn btn-primary" value="{% trans 'Go to step' %} {{ next_step }}">
 </form>
