--- a/install/templates/step4.html
+++ b/install/templates/step4.html
@@ -46,5 +46,5 @@
     <input type="hidden" name="pa_pass" value="{{ pa_pass }}">
     <input type="hidden" name="step" value="{{ next_step }}">
     <input type="hidden" name="language" value="{{ language }}">
-    <input type="submit" name="submit" value="{% trans 'Go to step' %} {{ next_step }}">
+    <input type="submit" name="submit" class="btn btn-primary" value="{% trans 'Go to step' %} {{ next_step }}">
 </form>
