--- a/install/templates/step6.html
+++ b/install/templates/step6.html
@@ -34,5 +34,5 @@ $dns_ns2 = '{{ dns_ns2 }}';
 <form method="post">
     <input type="hidden" name="step" value="{{ next_step }}">
     <input type="hidden" name="language" value="{{ language }}">
-    <input type="submit" name="submit" value="{% trans 'Go to step' %} {{ next_step }}">
+    <input type="submit" name="submit" class="btn btn-primary" value="{% trans 'Go to step' %} {{ next_step }}">
 </form>
