--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<h3>{% trans 'Welcome' %} {{ user_name }}</h3>
+<h4 class="mb-3">{% trans 'Welcome' %} {{ user_name }}</h4>
 <ul class="list-group">
     {% if perm_search %}
         <li class="list-group-item list-group-item-action">
