--- a/install/templates/footer.html
+++ b/install/templates/footer.html
@@ -1,5 +1,14 @@
-    <div class="footer">
+</main>
+
+<footer class="footer py-3 bg-light border">
+    <div class="container">
         <a href="https://www.poweradmin.org">a complete(r) <strong>poweradmin</strong> v{{ version }}</a>
     </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
