--- a/install/templates/header.html
+++ b/install/templates/header.html
@@ -1,11 +1,27 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Poweradmin</title>
-    <link rel=stylesheet href="../style/example.css" type="text/css">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script type="text/javascript" src="../inc/helper.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel=stylesheet href="../style/ignite.css?time={{ file_version }}" type="text/css">
+    <script type="text/javascript" src="../inc/helper.js?time={{ file_version }}"></script>
 </head>
 <body>
-    <h1>Poweradmin</h1>
-    <h2>{% trans 'Installation step' %} {{ current_step }}</h2>
+<header class="mb-4 border-bottom">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a class="py-4 d-flex align-items-center my-2 my-lg-0 me-lg-auto text-black text-decoration-none"
+               href="index.php">
+                <img class="me-2" src="../images/logo.png" height="32">
+                <span class="fs-4">Poweradmin</span>
+            </a>
+            <h5 class="text-secondary">{% trans 'Installation step' %} {{ current_step }}</h5>
+        </div>
+    </div>
+</header>
+
+<main class="container pb-3 flex-shrink-0">
