Updated db setup style in installer.

--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -3,7 +3,7 @@
     <table>
         <tr>
             <td width="150">{% trans 'Name' %}</td>
-            <td><input class="inform-controlput" type="text" name="templ_name" value=""></td>
+            <td><input class="form-control" type="text" name="templ_name" value=""></td>
         </tr>
         <tr>
             <td>{% trans 'Description' %}</td>
