--- a/install/templates/step3.html
+++ b/install/templates/step3.html
@@ -11,8 +11,8 @@
         <tbody>
         <tr id="username_row">
             <td>{% trans 'Username' %}</td>
-            <td><input class="form-control" type="text" name="user" value=""></td>
-            <td class="w-50">{% trans 'The username to use to connect to the database, make sure the username has
+            <td class="w-25"><input class="form-control" type="text" name="user" value=""></td>
+            <td>{% trans 'The username to use to connect to the database, make sure the username has
                 sufficient rights to perform administrative task to the PowerDNS database (the installer wants to drop,
                 create and fill tables to the database).' %}
             </td>
