--- a/install/templates/step6.html
+++ b/install/templates/step6.html
@@ -28,6 +28,8 @@ $iface_lang = '{{ language }}';
 $dns_hostmaster = '{{ dns_hostmaster }}';
 $dns_ns1 = '{{ dns_ns1 }}';
 $dns_ns2 = '{{ dns_ns2 }}';
+
+$ignore_install_dir = true;
 </pre>
 {% endif %}
 
