Removed old styles, applied bootstrap.

--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -9,6 +9,10 @@
             <td>{% trans 'Description' %}</td>
             <td><input class="form-control" type="text" name="templ_descr" value=""></td>
         </tr>
+        <tr>
+            <td></td>
+            <td><input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Add zone template' %}"></td>
+        </tr>
     </table>
-    <input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Add zone template' %}">
+
 </form>
