--- a/templates/header.html
+++ b/templates/header.html
@@ -23,61 +23,35 @@
                 <span class="fs-4">{{ iface_title }}</span>
             </a>
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-            {% if user_logged_in %}
+                {% if user_logged_in %}
                 {% if perm_search %}
                 <li class="p-1">
                     <a href="search.php" class="nav-link text-secondary"><i class="bi bi-search"></i></a>
                     <a href="search.php" class="text-secondary text-decoration-none">{% trans 'Search' %}</a>
                 </li>
                 {% endif %}
-                {% if perm_view_zone_own or perm_view_zone_other %}
+                {% if perm_view_zone_own or perm_view_zone_other or perm_zone_master_add or perm_zone_slave_add %}
                 <li class="p-1">
                     <a href="list_zones.php" class="nav-link text-secondary"><i class="bi bi-diagram-3"></i></a>
-                    <a href="list_zones.php" class="text-secondary text-decoration-none">{% trans 'Zones' %}</a>
+                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" href="#"
+                       role="button" aria-expanded="false">{% trans 'Zones' %}</a>
+                    <ul class="dropdown-menu">
+                        {% if perm_view_zone_own or perm_view_zone_other %}
+                        <li><a class="dropdown-item" href="list_zones.php">{% trans 'List zones' %}</a></li>
+                        {% endif %}
+                        {% if perm_zone_master_add %}
+                        <li><a class="dropdown-item" href="add_zone_master.php">{% trans 'Add master zone' %}</a></li>
+                        {% endif %}
+                        {% if perm_zone_slave_add %}
+                        <li><a class="dropdown-item" href="add_zone_slave.php">{% trans 'Add slave zone' %}</a></li>
+                        {% endif %}
+                        {% if perm_zone_master_add %}
+                        <li><a class="dropdown-item" href="bulk_registration.php">{% trans 'Bulk registration' %}</a>
+                        </li>
+                        {% endif %}
+                    </ul>
                 </li>
                 {% endif %}
-<!--                {% if perm_zone_master_add %}-->
-<!--                <li class="p-1">-->
-<!--                    <a href="list_zone_templ.php" class="nav-link text-secondary"><i class="bi bi-files"></i></a>-->
-<!--                    <a href="list_zone_templ.php" class="text-secondary text-decoration-none">{% trans 'Templates' %}</a>-->
-<!--                </li>-->
-<!--                {% endif %}-->
-<!--                {% if perm_supermaster_view %}-->
-<!--                <li class="p-1">-->
-<!--                    <a href="list_supermasters.php" class="nav-link text-secondary"><i class="bi bi-server"></i></a>-->
-<!--                    <a href="list_supermasters.php" class="text-secondary text-decoration-none">{% trans 'Supermasters' %}</a>-->
-<!--                </li>-->
-<!--                {% endif %}-->
-<!--                {% if perm_zone_master_add %}-->
-<!--                <li class="p-1">-->
-<!--                    <a href="add_zone_master.php" class="nav-link text-secondary"><i class="bi bi-plus-circle"></i></a>-->
-<!--                    <a href="add_zone_master.php" class="text-secondary text-decoration-none">{% trans 'Add master zone' %}</a>-->
-<!--                </li>-->
-<!--                {% endif %}-->
-<!--                {% if perm_zone_slave_add %}-->
-<!--                <li class="p-1">-->
-<!--                    <a href="add_zone_slave.php" class="nav-link text-secondary"><i class="bi bi-plus-circle"></i></a>-->
-<!--                    <a href="add_zone_slave.php" class="text-secondary text-decoration-none">{% trans 'Add slave zone' %}</a>-->
-<!--                </li>-->
-<!--                {% endif %}-->
-<!--                {% if perm_supermaster_add %}-->
-<!--                <li class="p-1">-->
-<!--                    <a href="add_supermaster.php" class="nav-link text-secondary"><i class="bi bi-plus-circle"></i></a>-->
-<!--                    <a href="add_supermaster.php" class="text-secondary text-decoration-none">{% trans 'Add supermaster' %}</a>-->
-<!--                </li>-->
-<!--                {% endif %}-->
-<!--                {% if perm_zone_master_add %}-->
-<!--                <li class="p-1">-->
-<!--                    <a href="bulk_registration.php" class="nav-link text-secondary"><i class="bi bi-plus-circle"></i></a>-->
-<!--                    <a href="bulk_registration.php" class="text-secondary text-decoration-none">{% trans 'Bulk registration' %}</a>-->
-<!--                </li>-->
-<!--                {% endif %}-->
-<!--                {% if auth_used %}-->
-<!--                <li class="p-1">-->
-<!--                    <a href="change_password.php" class="nav-link text-secondary"><i class="bi bi-key"></i></a>-->
-<!--                    <a href="change_password.php" class="text-secondary text-decoration-none">{% trans 'Change password' %}</a>-->
-<!--                </li>-->
-<!--                {% endif %}-->
                 <li class="p-1">
                     <a href="users.php" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
                     <a href="users.php" class="text-secondary text-decoration-none">{% trans 'Users' %}</a>
@@ -86,7 +60,7 @@
                     <a href="index.php?logout" class="nav-link text-secondary"><i class="bi bi-box-arrow-right"></i></a>
                     <a href="index.php?logout" class="text-secondary text-decoration-none">{% trans 'Logout' %}</a>
                 </li>
-            {% endif %}
+                {% endif %}
             </ul>
         </div>
     </div>
