--- a/templates/list_supermasters.html
+++ b/templates/list_supermasters.html
@@ -37,3 +37,6 @@
     {% endif %}
     </tbody>
 </table>
+<div>
+    <a class="btn btn-primary" href="add_supermaster.php">{% trans 'Add supermaster' %}</a>
+</div>
