--- a/templates/header.html
+++ b/templates/header.html
@@ -56,6 +56,17 @@
                     <a href="users.php" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
                     <a href="users.php" class="text-secondary text-decoration-none">{% trans 'Users' %}</a>
                 </li>
+                {% if perm_zone_master_add %}
+                <li class="p-1">
+                    <a href="list_zone_templ.php" class="nav-link text-secondary text-center"><i class="bi bi-files"></i></a>
+                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" href="#"
+                       role="button" aria-expanded="false">{% trans 'Templates' %}</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="list_zone_templ.php">{% trans 'List zone templates' %}</a></li>
+                        <li><a class="dropdown-item" href="add_zone_templ.php">{% trans 'Add zone template' %}</a></li>
+                    </ul>
+                </li>
+                {% endif %}
                 <li class="p-1">
                     <a href="index.php?logout" class="nav-link text-secondary"><i class="bi bi-box-arrow-right"></i></a>
                     <a href="index.php?logout" class="text-secondary text-decoration-none">{% trans 'Logout' %}</a>
