--- a/templates/edit_perm_templ.html
+++ b/templates/edit_perm_templ.html
@@ -1,4 +1,4 @@
-<h4 class="mb-3">{% trans 'Edit permission template' %}</h4>
+<h4 class="mb-3">{% trans 'List permission templates' %}</h4>
 <form method="post" action="">
     <input type="hidden" name="templ_id" value="{{ id }}">
 
