--- a/templates/header.html
+++ b/templates/header.html
@@ -54,11 +54,23 @@
                 {% endif %}
                 <li class="p-1">
                     <a href="users.php" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
-                    <a href="users.php" class="text-secondary text-decoration-none">{% trans 'Users' %}</a>
+                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" href="#"
+                       role="button" aria-expanded="false">{% trans 'Users' %}</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="users.php">{% trans 'Users' %}</a></li>
+                        {% if perm_add_new %}
+                        <li><a class="dropdown-item" href="add_user.php">{% trans 'Add user' %}</a></li>
+                        {% endif %}
+                        {% if perm_templ_perm_edit %}
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="list_perm_templ.php">{% trans 'List permission templates' %}</a></li>
+                        <li><a class="dropdown-item" href="add_perm_templ.php">{% trans 'Add permission template' %}</a></li>
+                        {% endif %}
+                    </ul>
                 </li>
                 {% if perm_zone_master_add %}
                 <li class="p-1">
-                    <a href="list_zone_templ.php" class="nav-link text-secondary text-center"><i class="bi bi-files"></i></a>
+                    <a href="#" class="nav-link text-secondary text-center"><i class="bi bi-files"></i></a>
                     <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" href="#"
                        role="button" aria-expanded="false">{% trans 'Templates' %}</a>
                     <ul class="dropdown-menu">
