--- a/templates/edit_perm_templ.html
+++ b/templates/edit_perm_templ.html
@@ -1,4 +1,4 @@
-<h4 class="mb-3">{% trans 'List permission templates' %}</h4>
+<h4 class="mb-3">{% trans 'Edit permission template' %}</h4>
 <form method="post" action="">
     <input type="hidden" name="templ_id" value="{{ id }}">
 
@@ -12,28 +12,32 @@
             <td><input class="form-control" type="text" name="templ_descr" value="{{ templ['descr'] }}"></td>
         </tr>
     </table>
-
-    <table>
+    <p></p>
+    <table class="table table-striped table-hover table-sm">
+        <thead>
         <tr>
             <th>&nbsp;</th>
             <th>{% trans 'Name' %}</th>
             <th>{% trans 'Description' %}</th>
         </tr>
+        </thead>
 
+        <tbody>
         {% for permission in perms_avail %}
         <tr>
             {% set descr = permission['descr'] %}
             {% set has_perm = "" %}
-            {% for template in perms_templ  %}
-                {% if permission['id'] in template %}
-                    {% set has_perm = "checked" %}
-                {% endif %}
+            {% for template in perms_templ %}
+            {% if permission['id'] in template %}
+            {% set has_perm = "checked" %}
+            {% endif %}
             {% endfor %}
             <td><input type="checkbox" name="perm_id[]" value="{{ permission['id'] }}" {{ has_perm }}></td>
             <td>{{ permission['name'] }}</td>
             <td>{% trans descr %}</td>
         </tr>
         {% endfor %}
+        </tbody>
     </table>
     <input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Commit changes' %}">
 </form>
