Added link to zone templates.

--- a/templates/header.html
+++ b/templates/header.html
@@ -70,7 +70,7 @@
                 </li>
                 {% if perm_zone_master_add %}
                 <li class="p-1">
-                    <a href="#" class="nav-link text-secondary text-center"><i class="bi bi-files"></i></a>
+                    <a href="list_zone_templ.php" class="nav-link text-secondary text-center"><i class="bi bi-files"></i></a>
                     <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" href="#"
                        role="button" aria-expanded="false">{% trans 'Templates' %}</a>
                     <ul class="dropdown-menu">
