--- a/templates/delete_zone_templ_record.html
+++ b/templates/delete_zone_templ_record.html
@@ -24,4 +24,4 @@
 <input type="button" class="btn btn-primary"
        onClick="location.href='delete_zone_templ_record.php?id={{ record_id }}&zone_templ_id={{ zone_templ_id }}&confirm=1'"
        value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary" onClick="location.href='index.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary" onClick="location.href='list_zone_templ.php'" value="{% trans 'No' %}">
