--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,6 +12,7 @@
         {% endif %}
     </div>
 </footer>
+
 {% if db_queries %}
     <div class="container pt-3 pb-3">
     <code>
@@ -25,5 +26,10 @@
     {{ display_stats | raw }}
 {% endif %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+<script>
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+</script>
 </body>
 </html>
