Block installer only if config file exists and it's on the 1st step.

--- a/install/templates/step3.html
+++ b/install/templates/step3.html
@@ -7,7 +7,7 @@
     sure the user has enough rights, before actually proceeding.' %}</p>
 
 <form method="post">
-    <table class="table">
+    <table class="table table-sm">
         <tbody>
         <tr id="username_row">
             <td>{% trans 'Username' %}</td>
